Fix table on mobile view

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -240,7 +240,7 @@ body {
     table {
       border-collapse: collapse;
       border: 1px solid #dddddd;
-      width: 702px;
+      max-width: 702px;
       min-height: 120px;
       margin-bottom: 20px;
       color: #4f4f4f;
